--- a/Css/style.css
+++ b/Css/style.css
@@ -12,7 +12,6 @@
     --weight--300: 300;
     --weight--400: 400;
     --weight--500: 500;
-    --weight--900: 900;
 
     /* Visual styles */
     --border-radius: 50%;
@@ -90,4 +89,80 @@ body {
 .instruction__button .fa-tasks {
     font-size: 2.3rem;
     color: var(--secondary-color);
+}
+
+/* ----------Modal de Instrucciones---------- */
+.modal {
+    /* display: none; */
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: var(--z-modal);
+    width: 100%;
+    height: 100vh;
+    overflow: auto;
+    animation-name: modal;
+    animation-duration: .5s;
+    background-color: rgba(253, 194, 10, .8);
+}
+
+.flex {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+
+.modal__content {
+    position: relative;
+    width: 80%;
+    margin: auto;
+    padding: 5rem 3rem;
+    border-radius: var(--border-radius-button);
+    background-color: var(--main-color);
+}
+
+.modal__logo {
+    text-align: center;
+    margin-bottom: 2.5rem;
+}
+
+.modal__logo img {
+    width: 20rem;
+}
+
+.close {
+    position: absolute;
+    top: 0;
+    right: 2rem;
+    font-family: var(--secondary--font);
+    font-size: 4.5rem;
+    cursor: pointer;
+    color: var(--secondary-color);
+}
+
+.modal__body p{
+    margin-bottom: 2rem;
+    text-align: center;
+}
+
+.modal__text {
+    font-size: 1.5rem;
+    font-weight: var(--weight--400);
+    color: var(--secondary-gray);
+}
+
+.list {
+    margin-left: 2rem;
+}
+
+@keyframes modal {
+    from {
+        top: -35rem;
+        opacity: 0;
+    }
+    to{
+        top: 0;
+        opacity: 1;
+    }
 }
