Crea el funcionamiento para motrar el modal de instrucciones al hacer click en el boton

--- a/Css/style.css
+++ b/Css/style.css
@@ -93,7 +93,7 @@ body {
 
 /* ----------Modal de Instrucciones---------- */
 .modal {
-    /* display: none; */
+    display: none;
     position: fixed;
     left: 0;
     top: 0;
