--- a/Css/style.css
+++ b/Css/style.css
@@ -93,7 +93,6 @@ body {
 
 /* ----------Modal de Instrucciones---------- */
 .modal {
-    display: none;
     position: fixed;
     left: 0;
     top: 0;
@@ -101,8 +100,10 @@ body {
     width: 100%;
     height: 100vh;
     overflow: auto;
-    animation-name: modal;
-    animation-duration: .5s;
+    opacity: 0;
+    visibility: hidden;
+    transition: transform 1s;
+    transform: translateY(-200%);
     background-color: rgba(253, 194, 10, .8);
 }
 
@@ -115,6 +116,7 @@ body {
 
 .modal__content {
     position: relative;
+    z-index: var(--z-modal);
     width: 80%;
     margin: auto;
     padding: 5rem 3rem;
@@ -154,15 +156,4 @@ body {
 
 .list {
     margin-left: 2rem;
-}
-
-@keyframes modal {
-    from {
-        top: -35rem;
-        opacity: 0;
-    }
-    to{
-        top: 0;
-        opacity: 1;
-    }
 }
