--- a/Css/style.css
+++ b/Css/style.css
@@ -45,6 +45,7 @@ body {
 /* ----------Contenedor---------- */
 .container {
     width: 100%;
+    height: 100vh;
 	max-width: 800px;
 	padding: 20px;
 	display: grid;
@@ -149,7 +150,7 @@ body {
 }
 
 .modal__text {
-    font-size: 1.5rem;
+    font-size: 1.23rem;
     font-weight: var(--weight--400);
     color: var(--secondary-gray);
 }
@@ -161,20 +162,25 @@ body {
 /* ----------Logo---------- */
 .logo {
     grid-area: logo;
-    padding: 3rem 0 5rem;
+    text-align: center;
 }
 
 .logo img {
-    width: 32rem;
+    width: 28rem;
 }
 
 /* ----------Boton Jugar---------- */
 .play__button {
-    width: 70%;
+    grid-area: button;
+    width: 75%;
     margin: 0 auto;
-    padding: 1.3rem 2.5rem;
+    padding: 2.5rem;
     border-radius: var(--border-radius-button);
     color: var(--secondary-color);
+}
+
+.play__button.flex {
+    height: 0;
 }
 
 .button__text {
@@ -186,4 +192,22 @@ body {
 .button__icon {
     padding-left: 1rem;
     font-size: 2.7rem;
+}
+
+/* ----------Footer---------- */
+.footer {
+    grid-area: footer;
+}
+
+.footer.flex {
+    align-items: flex-end;
+}
+
+.author {
+    font-size: 1.6rem;
+    color: var(--secondary-gray);
+}
+
+.author a {
+    color: var(--secondary-color);
 }
