--- a/Css/game.css
+++ b/Css/game.css
@@ -22,8 +22,8 @@
     /* color */
     --main-color: #1b1b1b;
     --secondary-color:#fdc20a;
-    --gray-color: #ccc;
-    --secondary-gray:#909090;
+    --gray-color: #4e4e4e;
+    --secondary-gray: #131313;
 }
 
 * {
@@ -40,4 +40,65 @@ body {
     font-family: var(--main--font);
     font-weight: var(--weight--400);
     background-color: var(--main-color);
+}
+
+/* ----------Contenedor---------- */
+.container {
+    width: 100%;
+    height: 100vh;
+	max-width: 800px;
+	padding: 20px;
+	display: grid;
+	grid-gap: 20px;
+	grid-template-columns: 1fr;
+	grid-template-rows: repeat(4, auto);
+	grid-template-areas:
+		'instruction'
+        'logo'
+        'button'
+		'footer';
+}
+
+.flex {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+
+/* ----------Tablero de Puntuación---------- */
+.scoreboard {
+    position: relative;
+    width: 100%;
+    border: 5px solid var(--secondary-gray);
+}
+
+.scoreboard__title {
+    position: absolute;
+    left: calc(100% - 50%);
+}
+
+.scoreboard__competitors {
+    height: 6rem;
+}
+
+.competitor__perfil.flex {
+    justify-content: space-evenly;
+}
+
+.competitor__perfil img {
+    width: 3.5rem;
+    border-radius: var(--border-radius);
+    box-shadow: var(--box-shadow);
+}
+
+.competitor__perfil span {
+    font-family: var(--secondary--font);
+    font-size: 1.6rem;
+    color: var(--gray-color);
+}
+
+.vs {
+    width: 1.5rem;
 }
