--- a/Css/game.css
+++ b/Css/game.css
@@ -45,7 +45,7 @@ body {
 /* ----------Contenedor---------- */
 .container {
     width: 100%;
-    height: 100vh;
+    /* height: 100vh; */
 	max-width: 800px;
 	padding: 20px;
 	display: grid;
@@ -68,53 +68,67 @@ body {
 }
 
 /* ----------Tablero de Puntuación---------- */
-/* .scoreboard {
+.scoreboard {
     grid-area: scoreboard;
-    position: relative;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, auto);
+    grid-template-areas:
+            'scoreTitle scoreTitle scoreTitle'
+            'competitors competitors competitors';
+    border: 8px solid var(--secondary-gray);
+}
+
+.scoreboard__title {
+    grid-area: scoreTitle;
     width: 100%;
-    border: 5px solid var(--secondary-gray);
+    height: 5rem;
+    text-align: center;
+    border-bottom: 8px solid var(--secondary-gray);
+}
+
+.scoreboard__title span {
+    font-family: var(--secondary--font);
+    font-size: 3rem;
+    color: var(--gray-color);
 }
 
 .scoreboard__competitors {
-    height: 6rem;
-}
-
-.competitor__perfil.flex {
-    justify-content: space-evenly;
-}
-
-.competitor__perfil img {
-    width: 3.5rem;
-    border-radius: var(--border-radius);
-    box-shadow: var(--box-shadow);
-}
-
-.competitor__perfil span {
+    grid-area: competitors;
     font-family: var(--secondary--font);
-    font-size: 1.6rem;
+    text-align: center;
+}
+
+.scoreboard__competitors.flex {
+    justify-content: space-between;
+}
+
+.scoreboard__competitor--user,
+.scoreboard__competitor--machine {
+    padding: 1rem 1rem 0;
+}
+
+.scoreboard__competitor--user {
+    border-right: 8px solid var(--secondary-gray);
+}
+
+.scoreboard__competitor--machine {
+    border-left: 8px solid var(--secondary-gray);
+}
+
+.competitor {
+    font-size: 1.5rem;
     color: var(--gray-color);
-}
-
-.vs {
-    width: 1.5rem;
-} */
-
-/* ?Puntuación */
-/* .score {
-    height: 10rem;
-    font-family: var(--secondary--font);
-}
-
-.score.flex {
-    justify-content: space-evenly;
 }
 
 .points {
-    font-size: 8rem;
+    font-size: 4rem;
     color: var(--secondary-color);
 }
 
-.divisor {
-    font-size: 5rem;
-    color: var(--gray-color);
-} */
+.notification__screen {
+    width: 100%;
+    height: 100%;
+    background-image: url("https://i.postimg.cc/VvzhbNgW/grid.png");
+    background-size: 1rem;
+}
