--- a/Css/game.css
+++ b/Css/game.css
@@ -39,6 +39,8 @@ html {
 body {
     font-family: var(--main--font);
     font-weight: var(--weight--400);
+    text-transform: uppercase;
+    color: var(--gray-color);
     background-color: var(--main-color);
 }
 
@@ -90,7 +92,6 @@ body {
 .scoreboard__title span {
     font-family: var(--secondary--font);
     font-size: 3rem;
-    color: var(--gray-color);
 }
 
 .scoreboard__competitors {
@@ -118,8 +119,6 @@ body {
 
 .competitor {
     font-size: 1.5rem;
-    text-transform: uppercase;
-    color: var(--gray-color);
 }
 
 .points {
@@ -140,6 +139,62 @@ body {
     font-size: 1.5rem;
     font-weight: var(--weight--500);
     text-align: center;
-    text-transform: uppercase;
-    color: var(--gray-color);
+}
+
+/* ----------Campo de Juego---------- */
+.battlefield {
+    grid-area: battlefield;
+    height: 40rem;
+    border: 8px solid var(--secondary-gray);
+}
+
+.battlefield__machine,
+.battlefield__user {
+    position: relative;
+    width: 100%;
+    height: 50%;
+}
+
+.battlefield__machine {
+    border-bottom: 4px dashed var(--secondary-gray);;
+}
+
+.battlefield__user {
+    border-top: 4px dashed var(--secondary-gray);;
+}
+
+.movement__container.flex {
+    flex-direction: column;
+}
+
+.fa-sync-alt {
+    margin-bottom: 1rem;
+    font-size: 3rem;
+    color: var(--secondary-color);
+}
+
+.loading__text {
+    font-size: 1.3rem;
+    font-weight: var(--weight--500);
+}
+
+.battlefield__name {
+    display: inline-block;
+    padding: .5rem 1rem;
+    font-family: var(--secondary--font);
+    font-size: 2rem;
+    color: var(--secondary-gray);
+    background-color: var(--main-color);
+}
+
+.machine__name {
+    position: absolute;
+    top: -2.2rem;
+    left: 1rem;
+}
+
+.user__name {
+    position: absolute;
+    bottom: -2.2rem;
+    right: 1rem;
 }
