--- a/Css/game.css
+++ b/Css/game.css
@@ -84,8 +84,6 @@ body {
 .scoreboard__title {
     grid-area: scoreTitle;
     width: 100%;
-    height: 5rem;
-    text-align: center;
     border-bottom: 8px solid var(--secondary-gray);
 }
 
@@ -110,14 +108,6 @@ body {
     padding: 1rem 1rem 0;
 }
 
-.scoreboard__competitor--user {
-    border-right: 8px solid var(--secondary-gray);
-}
-
-.scoreboard__competitor--machine {
-    border-left: 8px solid var(--secondary-gray);
-}
-
 .competitor {
     font-size: 1.5rem;
 }
@@ -130,6 +120,9 @@ body {
 .notification__screen {
     width: 100%;
     height: 100%;
+    border-width: 8px;
+    border-style: solid;
+    border-color: transparent var(--secondary-gray);
     background-image: url("https://i.postimg.cc/VvzhbNgW/grid.png");
     background-size: 1rem;
 }
