--- a/Css/game.css
+++ b/Css/game.css
@@ -24,6 +24,7 @@
     --secondary-color:#fdc20a;
     --gray-color: #4e4e4e;
     --secondary-gray: #131313;
+    --optional-gray: #909090;
 }
 
 * {
@@ -203,16 +204,19 @@ body {
     justify-content: space-between;
 }
 
+.buttons {
+    outline: none;
+    border: none;
+    cursor: pointer;
+    background-color: var(--main-color);
+    box-shadow: var(--box-shadow);
+}
+
 .options__button {
     width: 7rem;
     height: 7rem;
     text-align: center;
-    outline: none;
-    border: none;
-    cursor: pointer;
     border-radius: var(--border-radius);
-    background-color: var(--main-color);
-    box-shadow: var(--box-shadow);
 }
 
 .options__button:nth-child(1) img {
@@ -235,4 +239,90 @@ body {
 
 .surrender__button img {
     width: 3rem;
+}
+
+/* ----------Modal finalizacion del juego---------- */
+.modal {
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: var(--z-modal);
+    width: 100%;
+    height: 100vh;
+    overflow: auto;
+    opacity: 0;
+    visibility: hidden;
+    transition: transform 1s;
+    transform: translateY(-200%);
+    background-color: rgba(253, 194, 10, .8);
+}
+
+.modal__content {
+    position: relative;
+    z-index: var(--z-modal);
+    width: 80%;
+    margin: auto;
+    padding: 5rem 3rem;
+    font-family: var(--secondary--font);
+    border-radius: var(--border-radius-button);
+    background-color: var(--main-color);
+}
+
+.modal__header {
+    text-align: center;
+    margin-bottom: 2.5rem;
+}
+
+.winLose {
+    font-size: 4rem;
+    /* color: #57d200; */
+    /* color: #ef0014; */
+    text-shadow: .2rem .2rem #000;
+}
+
+.close {
+    position: absolute;
+    top: 0;
+    right: 2rem;
+    font-size: 4.5rem;
+    cursor: pointer;
+    color: var(--secondary-color);
+}
+
+.modal__body {
+    text-align: center;
+}
+
+.modal__text {
+    display: inline-block;
+    margin-bottom: 3rem;
+    font-size: 1.8rem;
+    color: var(--optional-gray);
+}
+
+.btn__modal {
+    margin: 0 auto;
+    padding: 1rem;
+    border-radius: var(--border-radius-button);
+    color: var(--secondary-color);
+}
+
+.play__again {
+    margin-bottom: 2rem;
+}
+
+.button__text {
+    font-family: var(--secondary--font);
+    font-size: 2rem;
+    text-transform: uppercase;
+}
+
+.button__icon {
+    padding-left: 1rem;
+    font-size: 2.7rem;
+}
+
+.buttons:active .button__text,
+.buttons:active .button__icon {
+    color: var(--optional-gray);
 }
