--- a/Css/game.css
+++ b/Css/game.css
@@ -173,6 +173,11 @@ body {
     font-weight: var(--weight--500);
 }
 
+#opt__user,
+#opt__machine {
+    display: none;
+}
+
 .battlefield__name {
     display: inline-block;
     padding: .5rem 1rem;
