--- a/Css/game.css
+++ b/Css/game.css
@@ -158,7 +158,7 @@ body {
     border-top: 4px dashed var(--secondary-gray);;
 }
 
-.movement__container.flex {
+.wait__for.flex {
     flex-direction: column;
 }
 
@@ -173,8 +173,8 @@ body {
     font-weight: var(--weight--500);
 }
 
-#opt__user,
-#opt__machine {
+.opt__user,
+.opt__machine {
     display: none;
 }
 
