Crea la funcion stop una vez alcanzado los 3 puntos, Muestra el modal una vez terminado el juego

--- a/Css/game.css
+++ b/Css/game.css
@@ -280,8 +280,7 @@ body {
 
 .winLose {
     font-size: 4rem;
-    /* color: #57d200; */
-    /* color: #ef0014; */
+    color: #57d200;
     text-shadow: .2rem .2rem #000;
 }
 
