--- a/Css/game.css
+++ b/Css/game.css
@@ -139,7 +139,7 @@ body {
 /* ----------Campo de Juego---------- */
 .battlefield {
     grid-area: battlefield;
-    height: 38rem;
+    height: 55vh;
     border: 8px solid var(--secondary-gray);
 }
 
@@ -218,8 +218,8 @@ body {
 }
 
 .options__button {
-    width: 7rem;
-    height: 7rem;
+    width: 6rem;
+    height: 6rem;
     text-align: center;
     border-radius: var(--border-radius);
 }
