--- a/Css/game.css
+++ b/Css/game.css
@@ -119,13 +119,17 @@ body {
 }
 
 .notification__screen {
-    width: 100%;
-    height: 100%;
     border-width: 8px;
     border-style: solid;
     border-color: transparent var(--secondary-gray);
     background-image: url("https://i.postimg.cc/VvzhbNgW/grid.png");
     background-size: 1rem;
+}
+
+.notifications {
+    font-size: 3.5rem;
+    color: var(--secondary-color);
+    text-shadow: .2rem .2rem var(--optional-gray);
 }
 
 /* ----------Disision---------- */
@@ -139,7 +143,7 @@ body {
 /* ----------Campo de Juego---------- */
 .battlefield {
     grid-area: battlefield;
-    height: 55vh;
+    height: 50vh;
     border: 8px solid var(--secondary-gray);
 }
 
