Crea los archivos para el responsive del juego, Aplica las media queries a la vista de inicio en la version tablet

--- a/Css/game.css
+++ b/Css/game.css
@@ -38,6 +38,8 @@ html {
 }
 
 body {
+    display: flex;
+    justify-content: center;
     font-family: var(--main--font);
     font-weight: var(--weight--400);
     text-transform: uppercase;
